->sock accessor, win32 support for tests, timeout on socket, new release

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 Polling sometimes doesn't work.
 Segfaults on exit sometimes.
 sftp is incredibly slow.
+Detect static build on Win32 and not define -DLIBSSH2_WIN32
