--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
+        - fix trace option to ->new
+
 0.33  2010-07-13 07:59:22
         - change trace option to use bitmask, so it becomes trace => -1, also
           added ->trace method
