--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
         - fix trace option to ->new
+        - handle partial writes for scp_put
+        - add $chan->exit_signal (patch from tommy.lindgren@gmail.com)
 
 0.33  2010-07-13 07:59:22
         - change trace option to use bitmask, so it becomes trace => -1, also
