--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
+        - allow setting lib and inc paths on the command line (salva)
+
 0.35  2011-05-10 17:43:17
         - fix for segfault due to auth_list() (RT#68060)
 
