add LD_LIBRARY_PATH to search paths (RT#74747)
Add LD_RUN_PATH and LD_LIBRARY_PATH (DYLD_LIBRARY_PATH on Mac OSX) to
the search paths for libs. Prioritize them at the top.

In the RT the reporter had a custom-built openssl pointed to by
LD_LIBRARY_PATH the location of which other Perl modules properly put
in the .so RPATH. Because of the indeterminate ordering of search paths
in previous versions, and LD_LIBRARY_PATH not being used, his normal
system openssl was linked to instead.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - add LD_RUN_PATH/LD_LIBRARY_PATH to search paths (RT#74747)
+        - fix order of search paths for libs/includes
+
 0.41  2012-04-18 22:12:07
         - fix missing -I for include directory with inc= option to Makefile.PL
           (RT#73659)
