update to latest ppport.h

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - update to latest ppport.h
+        - fix memory leak in password auth (RT#76701) (salva)
+
 0.43  2012-04-24 07:47:21
         - correct fix for (RT#73659) (remove inc=/lib= from @ARGV)
         - add BUILDING.WIN32 guide for building on Windows from scratch
