--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - fix builds on non-threaded perls (mauke: Lukas Mai)
+        - set default extra libs for Win32 (kmx)
+
 0.47  2013-02-10 19:06:42
         - timeout method to set a global timeout for every action (uses
           libssh2_session_set_timeout) (pullreq from Thierry Treyer: zehkae)
