disable c89 mode on non-dev builds (and sol+mingw)
The new gcc options to enforce c89 mode break on mingw and solaris due
to the perl headers not correctly working with -DPERL_GCC_PEDANTIC.

They will now only be activated in M::I's author mode, and only when the
host is not mingw or solaris.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - turn off -std=c89 -pedantic-errors for all builds except authors not
+          on mingw or solaris
+
 0.50  2013-07-29 10:25:13
         - remove #warning, not standard C89, throws an error on non-threaded
           builds due to -pedantic-errors (RT#87398)
