--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+        - detect scp not being installed on the remote and return undef from
+          scp_put (krimdomu: Jan) (GitHub PR: #17)
+
 0.51  2013-08-03 21:17:47
         - turn off -std=c89 -pedantic-errors for all builds except authors not
           on mingw or solaris
