--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Net::SSH2.
 
+0.54
+        
+        - add "Compress" option into "connect" method
+        - add "flags" method
+
 0.53  2013-09-01 06:05:17
         - add support for ldargs, and LIBSSH2_LIB, LIBSSH2_INCLUDE,
           LIBSSH2_LDARGS env vars while building (RT#88265)
