--- a/Changes
+++ b/Changes
@@ -4,7 +4,8 @@ Revision history for Perl extension Net::SSH2.
         - add Net::SSH2 known_hosts method and Net::SSH2::KnownHosts
           class
         - add keepalive_config and keepalive_send methods
-        - add channel method "window_write"
+        - add channel methods "window_write", "window_read" and
+          "receive_window_adjust"
         - add "Compress" option into "connect" method
         - add "flags" method
 
