--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
 0.54
+        - fix memory leaks
         - on channel read method, when non-blocking mode is set, don't
           call libssh2_channel_read repeatly until the buffer is
           filled
