Refactor SCP operations
The code for scp_get and scp_put had several bugs:

- Partial write operations were not handled correctly.
- Several error checks were missing...
- ...and so EINTR and EAGAIN errors were not handled either.
- Changing to blocking mode was done too late.
- System error numbers were used where libssh2 error codes were
  expected.

This patch is mostly a full reimplementation of both methods.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
+0.57_01
+        - reimplement scp_put and scp_get methods fixing several issues
         - add support for Mac Homebrew and its keg-only OpenSSL
 
 0.56  2015-10-9
