rerelease as stable 0.58

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+0.58  2015-12-20
+        - rereleas as stable
+
 0.57_03  2015-12-5
         - remove MYMETA.* from distribution (fixes #rt108717, reported
           by Alexandr Ciornii)
