--- a/README
+++ b/README
@@ -19,7 +19,7 @@ DEPENDENCIES
 
 This module also requires these libraries:
 
-   libSSH2 (http://www.libssh2.org; recommended to use version 1.6.0 or later)
+   libssh2 (http://www.libssh2.org; recommended to use version 1.7.0 or later)
    OpenSSL (http://www.openssl.org)
    zlib (optional; http://www.zlib.net)
 
