--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
 0.59_02  Apr 12, 2016
+        - Fix "auth_list" method.
         - Fix handling of "lib" argument in Makefile.PL.
         - Compilation was broken for perls 5.8.0 .. 5.8.3.
         - Several documentation improvements.
