--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Net::SSH2.
 
-0.59_03
+0.59_03  Apr 12, 2016
+        - Fix Channel "read" method that was hanging in blocking mode.
+        - Add "check_remote_hostkey" method for easy remote host key
+          verification (WIP)
         - Add "die_with_error" method.
         - Several documentation improvements.
 
