--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
 0.59_04
+        - Add scat.pl sample script
         - Several documentation improvements.
 
 0.59_03  Apr 12, 2016
