--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for Perl extension Net::SSH2.
 
-0.59_04
+0.59_04  Apr 13, 2016
+        - Use libssh2 function "libssh2_scp_send64" when available. It
+          allows sending files bigger than 4GB.
+        - Improve the way the user is prompted.
+        - Improve "check_remote_hostkey" method (WIP).
         - Add scat.pl sample script
         - Several documentation improvements.
         - Remove File::Slurp dependency in test script.
