--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_06
+        - Several documentation improvements.
+
 0.59_05  Apr 16, 2016
         - Switch the order of "policy" and "known_host_path" arguments
           in method "check_hostkey".
