--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_07  2016-04-17
+        - In auth, do not call authentications methods unless they are
+          supported by the server.
+        - Fix minor scp_get issue
+        - Add workaround for getpwuid not being available on MS
+          Windows.
+        - Several documentation fixes.
+
 0.59_06  2016-04-17
         - Add method die_with_error into Net::SSH2::SFTP
         - Several documentation improvements.
