--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_09
+        - The realclean target of the generated Makefile was deleting
+          const-c.inc and const-xs.inc which are not generated
+          anymore.
+
 0.59_08  2016-04-18
         - Get extended diagnosis messages when $ENV{AUTOMATED_TESTING}
           is set.
