--- a/Changes
+++ b/Changes
@@ -1,9 +1,13 @@
 Revision history for Perl extension Net::SSH2.
 
-0.59_09
+0.59_09  2016-04-18
+        - Method "read" was not returning errors correctly.
+        - Typemaps for 64bit integers were broken
+        - Restrict the channel type to "session" in method "channel".
         - The realclean target of the generated Makefile was deleting
           const-c.inc and const-xs.inc which are not generated
           anymore.
+        - Several documentation improvements.
 
 0.59_08  2016-04-18
         - Get extended diagnosis messages when $ENV{AUTOMATED_TESTING}
