--- a/Changes
+++ b/Changes
@@ -1,13 +1,21 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_13  2016-04-26
+        - Detect EOF in most cases (cannot be done always due to
+          libssh2 limitations) in "readline" and "getc".
+        - Clear error before returning from "readline" as it returns
+          undef for compatibility with Perl builtin even when no error
+          has happened.
+        - Several documentation improvements.
+
 0.59_12  2016-04-26
         *** WARNING: backward incompatible change: "READLINE" had an
           undocumented hard coded timeout of 250ms which made the
           method unreliable. That timeout has been removed. If
           desired, the old behaviour can be attained setting
           non-blocking mode or with a global timeout.
-        - add Channel "readline" method.
-        - add Channel "getc" method.
+        - Add Channel "readline" method.
+        - Add Channel "getc" method.
         - Cleanup of the channel tie interface.
 
 0.59_11  2016-04-22
