--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_15
+
+        - SFTP file READ was broken (reported by Chris Kirke).
+
 0.59_14  2016-0428
         - READLINE was not clearing the error code correctly.
 
