--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_19  2016-05-10
+         - Honour timeout setting from _ask_user method.
+
 0.59_18  2016-05-09
         - Fix failing test caused by a remote SIGPIPE (bug report by
           Ferenc Erki).
