--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Net::SSH2.
 
+0.59_22  2016-05-18
+        - Add sopport for some additional constants.
+        - Make remote login default to local one.
+        - Several documentation improvements.
+
 0.59_21  2016-05-13
         - Conversion of stream_id arguments have been moved to a
           typemap.
