--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
 0.59_22  2016-05-18
-        - Add sopport for some additional constants.
+        - Add support for some additional constants.
         - Make remote login default to local one.
         - Several documentation improvements.
 
