Fix more misspellings

--- a/Changes
+++ b/Changes
@@ -12,7 +12,7 @@ Revision history for Perl extension Net::SSH2.
         - Channel 'flush' was not handling 'all' properly.
 
 0.59_20  2016-05-11
-        - Method timeout is not available for old libssh2 versions.
+        - Method timeout is not available in old libssh2 versions.
 
 0.59_19  2016-05-10
          - Honour timeout setting from _ask_user method.
