Changes: last bug was actually reported by jfried!

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
 0.60  2016-05-23
-        - Fix connecting to a custom port (bug report by Ferenc Erki).
+        - Fix connecting to a custom port (bug report by Jan Gehring).
 
 0.59_23  2016-05-19
         - Fix handling of eof in Channel read2 method.
