Prepare for release 0.61

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Net::SSH2.
 
+0.61  2016-06-03
+        - auth method was skipping agent authentication always (bug
+          report and patch by NIkolay A. Fetisov).
+
 0.60  2016-05-23
         - Fix connecting to a custom port (bug report by Jan Gehring).
 
