--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
 0.63
+        - die_with_error errors pointed to that method instead of its
+          caller.
         - Fix case in user message.
         - Silence warning in perl 5.10.
 
