--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SSH2.
 
+0.64
+        - t/Net-SSH2.t: add support for TEST_NET_SSH2_TRACE
+
 0.63  2016-10-13
         - die_with_error errors pointed to that method instead of its
           caller.
