prepare for release 0.64

--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 Revision history for Perl extension Net::SSH2.
 
-0.64
+0.64  2017-06-14
+        - Accept debug flag on the constructor.
+        - Ensure the crypto libraries are positioned after libssh2 on
+          the link line (bug report and patch by Jacques Germishuys).
         - Channel "pty" method now accepts mode modifiers passed as a
           hash.
-        - in connect, warnif was clobbering $! (bug report and patch
+        - In connect, warnif was clobbering $! (bug report and patch
           by ikegami).
         - t/Net-SSH2.t: add support for TEST_NET_SSH2_TRACE
 
