--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Net::SSH2.
 
-0.65
+0.65  2017-06-14
+        - Improve Travis CI testing
         - Fix perl 5.8 support
         - Warn when check_hostkey is called in void context.
 
