Fix Building on Windows.
Remove obsolete Windows-specific code, as the general code works fine
now.

Remove obsolete BUILDING.WIN32 guide and references to it.

Prepend :nosearch to LIBS on Windows so that EUMM does not try to search
for dll import libs, as this fails on the MSYS2 MinGW perl.

Update Changes.

- Fix #29.

Signed-off-by: Rafael Kitover <rkitover@gmail.com>

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Net::SSH2.
 
+	- Fix building on Windows.
+	- Fix installation on macOS with Homebrew.
+	- Rewrite synopsis to be more relevant to usual use-cases.
+
 0.70  2019-3-17
 	- Documentation improvements.
 	- SFTP stat was not reporting errors correctly (bug report and
